Minor refactorings. Better docker build. Added definitions endpoint
