# docs/swagger.json
@@ -16,6 +16,72 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/definitions": {
+            "get": {
+                "description": "Gets a list of all definitions",
+                "tags": [
+                    "definitions"
+                ],
+                "summary": "Get all the definitions",
+                "operationId": "all-definitions",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/definitions.Endpoint"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/definitions/:name": {
+            "get": {
+                "description": "Gets a single definition identified by his endpoint name",
+                "tags": [
+                    "definitions"
+                ],
+                "summary": "Get one definition",
+                "operationId": "definition",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bluetooth",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/definitions.Endpoint"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "Get the health status of the API",
@@ -59,7 +125,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/validation.Report"
+                                "$ref": "#/definitions/pipeline.Report"
                             }
                         }
                     },
@@ -99,7 +165,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/validation.Report"
+                            "$ref": "#/definitions/pipeline.Report"
                         }
                     },
                     "404": {
@@ -142,14 +208,121 @@
                 }
             }
         },
-        "validation.Report": {
+        "definitions.Endpoint": {
+            "type": "object",
+            "properties": {
+                "baseUrl": {
+                    "description": "BaseUrl is the base path of the endpoint",
+                    "type": "string"
+                },
+                "excludedValidators": {
+                    "description": "ExcludedValidators is a list of validators that should not be used for this endpoint",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "fileName": {
+                    "description": "FileName is the name of the file that contains the definition",
+                    "type": "string"
+                },
+                "format": {
+                    "description": "Format is the response format of the",
+                    "type": "string"
+                },
+                "fullPath": {
+                    "description": "FullPath is the full path of the file that contains the definition",
+                    "type": "string"
+                },
+                "isEnabled": {
+                    "description": "IsEnabled is a boolean that indicates if the endpoint is enabled (not contained in the definition)",
+                    "type": "boolean"
+                },
+                "name": {
+                    "description": "Name is the name of the endpoint",
+                    "type": "string"
+                },
+                "queryParameters": {
+                    "description": "QueryParameters are all the query parameters that should be added to the call",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/query.Definition"
+                    }
+                },
+                "resultSchema": {
+                    "description": "ResultSchema describes how the response should look like",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/definitions.SchemaEntry"
+                    }
+                },
+                "variables": {
+                    "description": "Variables are all the variables that should be interpolated in the base url and the query parameters",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/definitions.Variable"
+                    }
+                }
+            }
+        },
+        "definitions.SchemaEntry": {
+            "type": "object",
+            "properties": {
+                "fields": {
+                    "description": "Fields describe the children of this field if the field is an object or array",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/definitions.SchemaEntry"
+                    }
+                },
+                "isRequired": {
+                    "description": "Required is true if the field is required (not null or not empty in case of an array)",
+                    "type": "boolean"
+                },
+                "maximum": {
+                    "description": "Maximum is the maximum allowed value of the field"
+                },
+                "minimum": {
+                    "description": "Minimum is the minimum allowed value of the field"
+                },
+                "name": {
+                    "description": "Name is the name of the field",
+                    "type": "string"
+                },
+                "type": {
+                    "description": "Type is the type of the field",
+                    "type": "string"
+                }
+            }
+        },
+        "definitions.Variable": {
+            "type": "object",
+            "properties": {
+                "isConstant": {
+                    "description": "IsConstant is true if the value of the variable is constant or else false",
+                    "type": "boolean"
+                },
+                "name": {
+                    "description": "Name is the name of the variable",
+                    "type": "string"
+                },
+                "values": {
+                    "description": "Values are all the possible values of the variable (only 1 in case of a constant)",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "pipeline.Report": {
             "type": "object",
             "properties": {
                 "endpoints": {
                     "description": "Endpoints is a collection of ValidatedEndpoint holding the validation results",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/validation.ValidatedEndpoint"
+                        "$ref": "#/definitions/pipeline.ValidatedEndpoint"
                     }
                 },
                 "id": {
@@ -162,7 +335,7 @@
                 }
             }
         },
-        "validation.TestCaseResult": {
+        "pipeline.TestCaseResult": {
             "type": "object",
             "properties": {
                 "url": {
@@ -173,12 +346,12 @@
                     "description": "ValidatorResults is the collection of ValidatorResult that describe the result of each validator",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/validation.ValidatorResult"
+                        "$ref": "#/definitions/pipeline.ValidatorResult"
                     }
                 }
             }
         },
-        "validation.ValidatedEndpoint": {
+        "pipeline.ValidatedEndpoint": {
             "type": "object",
             "properties": {
                 "endpointName": {
@@ -189,12 +362,12 @@
                     "description": "TestCaseResults are the collection of TestCaseResult that describe the result of validating a single api call",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/validation.TestCaseResult"
+                        "$ref": "#/definitions/pipeline.TestCaseResult"
                     }
                 }
             }
         },
-        "validation.ValidatorResult": {
+        "pipeline.ValidatorResult": {
             "type": "object",
             "properties": {
                 "message": {
@@ -207,6 +380,19 @@
                 },
                 "status": {
                     "description": "Status is the status of the validator (success/fail/skipped)",
+                    "type": "string"
+                }
+            }
+        },
+        "query.Definition": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "description": "Name is the name of the query parameter",
+                    "type": "string"
+                },
+                "value": {
+                    "description": "Value is the value of the query parameter",
                     "type": "string"
                 }
             }
