# validation/definitions/variables.go
@@ -7,9 +7,9 @@ import (
 
 // Variable describes a variable that should be interpolated in the base url and the query parameters
 type Variable struct {
-	Name       string   `yaml:"name"`     // Name is the name of the variable
-	IsConstant bool     `yaml:"constant"` // IsConstant is true if the value of the variable is constant or else false
-	Values     []string `yaml:"values"`   // Values are all the possible values of the variable (only 1 in case of a constant)
+	Name       string   `yaml:"name" json:"name"`         // Name is the name of the variable
+	IsConstant bool     `yaml:"constant" json:"constant"` // IsConstant is true if the value of the variable is constant or else false
+	Values     []string `yaml:"values" json:"values"`     // Values are all the possible values of the variable (only 1 in case of a constant)
 }
 
 // EndpointParameter is an interface that defines a parameter that will be interpolated as variable in an endpoint request
